@@ -1,3 +1,7 @@
+2011-02-08  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_init.c, pj_malloc.c, jniproj.c: avoid C++ comments (#92)
+
 2011-01-11  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/PJ_goode.c: fix propogation of es and ctx to sub-projections.
